fix broken ui on iphone and ipad

--- a/styles.css
+++ b/styles.css
@@ -1,121 +1,34 @@
 body {
-  margin: 0px 0px 0px 0px;
-  font-family: -apple-system;
+    font-family: -apple-system;
+    font-size: 18px;
+    color: #453b3b;
+    background-color: grey;
 }
-.section {
-  height: 800px;
-  background: grey;
-  overflow: hidden;
+
+.about {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 0 30px;
 }
-.section-title {
-  padding-top:25px;
-  padding-left: 20px;
-  display: block;
-  font-size: 23px;
+
+.about_image {
+    width: 400px;
 }
-.sidenav {
-  height: 100%;
-  width: 160px;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  background-color: #111;
-  overflow-x: hidden;
-  padding-top: 20px;
+
+.about_welcome {
+    margin-left: 30px;
 }
-.sidenav a {
-  padding: 5px 8px 5px 16px;
-  text-decoration: none;
-  font-size: 23px;
-  color: #818181;
-  display: block;
-}
-.sidenav a:hover {
-  color: #f1f1f1;
-}
-.main {
-  margin-left: 160px;
-  overflow: hidden;
-}
-.section-content {
-  display: block;
-  overflow: hidden;
-}
-#name {
-  width: 600px;
-  padding-top: 100px;
-  text-align: center;
-  font-size: 20px;
-  float: left;
-}
-#image {
-  height: 650px;
-  border-radius: 10px;
-}
-#main-photo {
-  float: left;
-}
-#about-page-image {
-  height: 650px;
-  border-radius: 10px;
-}
-#yoe {
-  display: inline;
-}
-.info-component {
-  display: inline;
-  width: 250px;
-  float: left;
-  margin-right: 10px;
-  margin-bottom: 10px;
-}
-.info-component-key {
-  float:left;
-  margin-right: 10px;
-}
-.info-component-value {
-  float: left;
-}
-#about-page-image-div {
-  float: left;
-  margin: 10px;
-}
-.about-info {
-  float:left;
-  width: 600px;
-}
-#about-me-question {
-  margin-top: 10px;
-  font-size: 25px;
-}
-#job-title {
-  font-size: 20px;
-  margin-top: 30px;
-}
-#about-me-description {
-  margin-top: 20px;
-  float: left;
-}
-#key-details {
-  margin-top: 30px;
-  overflow: hidden;
-  float: left;
-}
-#about-actions {
-  margin-top: 30px;
-  overflow: hidden;
-  float: left;
-}
+
 .button {
   float: left;
   margin: 20px 0px 0px 20px;
-  width: 250px;
+  width: 200px;
   height: 30px;
   text-align: center;
   padding-top: 10px;
   background-color: black;
   border-radius: 5px;
-  font-family: -apple-system;
   color: #818181;
   text-decoration: none;
 }
